Change features from Java 16 to Java 8
To ensure that the library can be accessed in many different versions the language from version 8 and above.